--- a/sbAuthentication/pom.xml
+++ b/sbAuthentication/pom.xml
@@ -153,17 +153,21 @@
     <artifactId>pagehelper-spring-boot-starter</artifactId>
     <version>1.2.7</version>
   </dependency>
-  
     <!-- <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>5.1.9.RELEASE</version>
     </dependency> -->
-  
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore</artifactId>
       <version>4.4.11</version>
+    </dependency>
+    <!-- hotdeployment -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
     </dependency>
   
   </dependencies>
